--- a/index.html
+++ b/index.html
@@ -232,6 +232,9 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
+<script src="js/constants.js"></script>
+<script src="js/helpers.js"></script>
+<script src="js/picture.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
