--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
 <script src="js/constants.js"></script>
 <script src="js/helpers.js"></script>
 <script src="js/picture.js"></script>
+<script src="js/backend.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
