--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 <script src="js/preview.js"></script>
 <script src="js/constants.js"></script>
 <script src="js/helpers.js"></script>
-<script src="js/gallery.js"></script>
+<!-- <script src="js/gallery.js"></script> -->
 <script src="js/main.js"></script>
 </body>
 </html>
