--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <main>
+  <main class="site-content">
 
     <!-- Фильтрация изображений от других пользователей -->
     <section class="img-filters  img-filters--inactive  container">
@@ -229,10 +229,9 @@
 <script src="js/helpers.js"></script>
 <script src="js/picture.js"></script>
 <script src="js/preview.js"></script>
-<script src="js/gallery.js"></script>
 <script src="js/form.js"></script>
 <script src="js/validation.js"></script>
 <script src="js/readfile.js"></script>
-<script src="js/main.js"></script>
+<script src="js/effects.js"></script>
 </body>
 </html>
